--- a/20181202重新学英语-音标.md
+++ b/20181202重新学英语-音标.md
@@ -1,4 +1,4 @@
-> 年纪越大越越能感觉到基础的重要性，这就是所谓的后知后觉吧。  
+**> 年纪越大越越能感觉到基础的重要性，这就是所谓的后知后觉吧。  
     音标共48个，20个元音28个辅音。
 
 ## /iː/ 归类为：单元音-前元音-长元音
@@ -10,14 +10,14 @@
 
 ## 一般都有那些字母组合发 /iː/
 
-### 1. e 元音字幕
+#### 1. e 元音字幕
 
 | - | - | - |
 | - | - | - |
 | he /hi:/ 他 | me /mi:/ 我们 | be /bi:/ 是 |
 | she /ji:/ 她 | we /wi:/ 我们 | eve /i:v/ 夏娃 |
 
-### 2. ee, ea, ie, ei 一般都发 /i:/ 
+#### 2. ee, ea, ie, ei 一般都发 /i:/ 
 
 > ee
 
@@ -39,3 +39,4 @@
 | - | - |
 | achieve /ə'tʃiːv/ 取得 | believe /bɪ'liːv/ 信任 | 
 | belief /bɪ'liːf/ 相信 | relieve /rɪ'liːv/ 解除 |
+**
