--- a/20181202PWA简介.md
+++ b/20181202PWA简介.md
@@ -11,7 +11,7 @@
 |80%|-->|微信，百度，淘宝|
 |20%|-->|中小型App|
 
-    由此可见，普通App开发者只能从**“20%”**中争取用户，并且每月安装新App的数量只有**“1”**个
+    由此可见，普通App开发者只能从 “20%” 中争取用户，并且每月安装新App的数量只有 “1” 个
 
 ### App的获客途径
 
