--- a/20181202PWA简介.md
+++ b/20181202PWA简介.md
@@ -39,11 +39,13 @@
 ### PWA 的几个核心技术
 
 - Web App Minifest
-    > 配置网站添加到主屏，设置打开是的浏览器央视，比如去掉地址栏。
+    - 配置网站添加到主屏，设置打开是的浏览器央视，比如去掉地址栏。
 - Service Worker
-    > 可以在浏览器关掉之后还在执行的js代码，它能拦截请求，操作缓存，支持 Push Api等
+    - 可以在浏览器关掉之后还在执行的js代码，它能拦截请求，操作缓存，支持 Push Api等
 - Push Api & Notification Api
-    > 通知接口，用于向用户配置和显示桌面通知。
+    - 通知接口，用于向用户配置和显示桌面通知。
 - App Shell & App Skeleton
-    > 描述页面基本结构。于 Service Worker 结合实现离线缓存。比如断网时用户打开虽然看不到数据但是能看到页面的基本结构。
+    - 描述页面基本结构。于 Service Worker 结合实现离线缓存。比如断网时用户打开虽然看不到数据但是能看到页面的基本结构。
+
+
 > 百度的 lavas 团队一直在做这方面研究。支持他们 [官网-->](https://lavas.baidu.com/)
